Fixed margin problems, card flexbox wrapping.
Could be improved image extension and cropping,
also quotation section for mobile is not easily
readable.

--- a/style.css
+++ b/style.css
@@ -6,9 +6,10 @@ body {
     padding: 0;
     font-family: Roboto mono, sans-serif
 }
-.header, .main, .card-container, .information, .testimonial, .call-to-action {
-    padding-left: 100px;
-    padding-right: 100px;
+.header, .main, .information, .testimonial, .call-to-action {
+    padding-left: 200px;
+    padding-right: 200px; 
+    padding-bottom: 50px    
     
 }
 h1 {
@@ -23,27 +24,28 @@ h1 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    
+    align-items: center;      
 }
-.footer {
-    color: #e5e7eb;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 
-}
 .header, .main, .footer{
-    background-color: #1f2937;   
-     
+    background-color: #1f2937;        
 }
 .main {
     display: flex;
+    flex-wrap: wrap;    
 }
-
-.header{
+.text {
+    max-width: 500px;
+    margin-right: 30px;
+}
+.text button {
+    border-color: transparent
+}
+.header ul{
     display: flex;
+    justify-content: flex-end;
     align-items: center;
+    gap: 30px;       
 }
 #logo {
     color: #f9faf8;
@@ -52,30 +54,53 @@ h1 {
 #camping {
     width: auto;
     height: 400px;
+    border-radius: 12px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 .information h2 {
     font-size: 32px;
     color: #1f2937;
     font-weight: 900;
+    text-align: center;
 }
 .card-container img{
     width: 200px;
-    height: 200px
+    height: 200px;
+    border-radius: 12px; 
+    margin-bottom: 0px   
 }
-.card-container {
-    margin: 0 auto;
+.card-container p{
+    width: 200px;
+    margin-bottom: 10px
+}
+.card-container {    
     display: flex;
-    flex-wrap: wrap;
-    flex: 1
+    flex-direction: row;
+    flex-wrap: wrap;    
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+    gap: 10px
 }
+
 .testimonial {
     background-color: #e5e7eb;
-}
+    }
 .quote {
     font-size: 36px;
     color: #1f2937;
-    font-style: light italic;
+    font-weight: lighter;
+    font-style: italic;
+    padding: 100px 100px 0 100px
 }
+.citation {
+    font-size: 18px;
+    text-align: end;
+    font-weight: bold;
+    padding: 0px 100px 100px 100px
+}
+
 
 ul {
     list-style-type: none;
@@ -83,11 +108,57 @@ ul {
     padding: 0;
     display: flex;
     gap: 10px;
-    justify-content:end;
-    
+    justify-content:end;    
     flex: 1
 }
 a {
     text-decoration: none;
     color: inherit;
+}
+button, .call-to-action {
+    background-color: #3882f6;
+}
+.call-to-action {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 200px;
+    padding: 50px;
+    border-radius: 25px
+}
+.call-action-title, .call-action-subtext {
+    color: #e5e7eb;
+    font-size: 18px;
+    margin: 0;
+    
+}
+.call-action-title {
+    font-weight: bold;
+    font-size: 22px;
+    
+}
+
+button {
+    color: white;
+    min-width: 150px;
+    font-size: 18px;
+    font-weight: 800;
+    min-height: 50px;
+    border-radius: 12px;
+}
+
+.call-to-action button {
+    border: 3px solid white;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.footer {
+    color: #e5e7eb;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100px
+
 }
